# krp-sharedmemory-plugin

./: .gitignore  CMakeLists.txt  KRPSMP.sln  License  README.md  build.bat  codealike.json  install.bat
KRPSMP/: CameraInfo.cpp  CameraInfo.h  CameraSet.c  CameraSet.h  Configuration.c  Configuration.h  KRPSMP.c  KRPSMP.h  KRPSMP.vcxproj  KRPSMP.vcxproj.filters  KartEventInfo.c  KartEventInfo.h  KartLapInfo.c  KartLapInfo.h  KartSessionInfo.c  KartSessionInfo.h  KartSplitInfo.c  KartSplitInfo.h  KartTelemetryInfo.c  KartTelemetryInfo.h  PluginInfo.c  PluginInfo.h  RaceAddEntryInfo.c  RaceAddEntryInfo.h  RaceClassificationInfo.c  RaceClassificationInfo.h  RaceCommunicationInfo.c  RaceCommunicationInfo.h  RaceEntriesInfo.c  RaceEntriesInfo.h  RaceEventInfo.c  RaceEventInfo.h  RaceLapInfo.c  RaceLapInfo.h  RaceRemoveEntryInfo.c  RaceRemoveEntryInfo.h  RaceSessionInfo.c  RaceSessionInfo.h  RaceSessionStateInfo.c  RaceSessionStateInfo.h  (+12 more)
include/: KRPSMP.h  SharedFileIn.h  SharedFileOut.h
src/: KRPSMP.cpp
src/Configuration/: Configuration.cpp  Configuration.h
src/Logger/: Logger.cpp  Logger.h
src/MappedBuffer/: MappedBuffer.cpp  MappedBuffer.h
